[tool.poetry]
name = "dask-tutorial"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nodejs = "^0.1.1"
jupyterlab = ">=1.0"
numpy = ">=1.16.4"
h5py = "^2.10.0"
scipy = ">=1.3.0"
toolz = "^0.10.0"
bokeh = ">=1.2.0"
dask = "2.11.0"
notebook = "^6.0.3"
matplotlib = "^3.1.3"
Pillow = "^7.0.0"
pandas = ">=0.24.2"
pandas-datareader = "^0.8.1"
scikit-learn = ">=0.21.1"
scikit-image = ">=0.15.0"
snakeviz = "^2.0.1"
ujson = "^1.35"
pip = "^20.0.2"
s3fs = "^0.4.0"
fastparquet = "^0.3.3"
dask-ml = "^1.2.0"
ipywidgets = ">=7.5"
cachey = "^0.1.1"
graphviz = "^0.13.2"
zarr = "^2.4.0"
dask-labextension = "^1.1.0"
distributed = ">=1.24.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
